2014-08-04  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el: Fix completions inside (i)pdb.
	(python-shell-completion-pdb-string-code): Make obsolete.
	(python-shell-completion-get-completions): Use
	python-shell-completion-string-code resending setup code
	continuously for (i)pdb.

2014-08-04  Paul Eggert  <eggert@cs.ucla.edu>

	* rect.el (rectangle--default-line-number-format): Rename
	from misspelled rectange--default-line-number-format (Bug#18045).
	All uses changed.

2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>

	Don't mishandle year-9999 dates (Bug#18176).
	* calendar/parse-time.el (parse-time-rules):
	Allow years up to most-positive-fixnum.
	* calendar/time-date.el (date-to-time):
	Pass "Specified time is not representable" errors through.

2014-08-02  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el: Completion code cleanups.
	(python-shell-completion-get-completions): Detect and send import
	statements directly to completion function.
	(python-shell-completion-at-point): Simplify prompt calculation
	and import vs input completion logic.

2014-08-02  Alan Mackenzie  <acm@muc.de>

	Fix confusion in C++ file caused by comma in "= {1,2},".  Bug
	#17756.
	* progmodes/cc-engine.el (c-beginning-of-statement-1): In checking
	for a statement boundary marked by "}", check there's no "="
	before the "{".
	(c-guess-basic-syntax CASE 9B): Call c-beginning-of-statement with
	non-nil `comma-delim' argument.
	* progmodes/cc-fonts.el (c-font-lock-declarators): Parse an
	initializer expression more accurately.

	Correct loop termination condition in c-syntactic-skip-backward.
	* progmodes/cc-engine.el (c-syntactic-skip-backward): Correct for
	the situation where, after moving back out of a literal,
	skip-chars-backward doesn't move further, yet checks have still to
	be done.

2014-08-01  Eli Zaretskii  <eliz@gnu.org>

	* tutorial.el (tutorial--display-changes): Accept punctuation
	characters before the key binding.  (Bug#18146)
