@@ -1,3 +1,8 @@
+2014-08-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-cache.el (tramp-flush-file-function): Suppress function
+	also for Tramp working buffers.
+
 2014-08-04  Fabián Ezequiel Gallina  <fgallina@gnu.org>
 
 	* progmodes/python.el: Fix completions inside (i)pdb.
